calculator.css
.calculator {
  width: 300px;
  margin: 0 auto;
  padding: 10px;
  background-color: #f2f2f2;
  border-radius: 10px;
}

#result-window-data {
  width: 280px;
  height: 50px;
  padding: 10px;
  text-align: right;
  font-size: 10px;
  border: none;
  background-color: azure;
}

.buttonsGrid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 10px;
}

button {
  width: 100%;
  height: 50px;
  font-size: 20px;
  border: none;
  background-color: #fff;
  cursor: pointer;
}

button:hover {
  background-color: #ddd;
}

